# Embedded-Smart-House-Socketed

./: .gitignore  CMakeLists.txt  README.md  client.c  main.c
cmake/tool/: .oe-sdk_cross.cmake.swp  oe-sdk_cross.cmake
include/: base64.h  doors.h  libgpio.h  lights.h  photo.h  user.h
lib/: CMakeLists.txt  libgpio.c
src/: base64.c  doors.c  lights.c  photo.c  user.c
